feat: 添加用户删除函数
